added the bubble chart

--- a/index.html
+++ b/index.html
@@ -150,9 +150,14 @@
         
 
         <!-- chart 4 -->
-        <div id="timeSeriesContainer" class="container">
-            <h2>Time Series Chart</h2>
-            <svg id="timeSeriesChart"></svg>
+        <div id="bubbleContainer" class="container">
+            <h2>Bubble Chart</h2>
+            <div>
+                <label for="bubbleselect">Bubble Parameter</label>
+                <div id="bubbledropdown"></div>
+            </div>
+            <!-- bubble chart SVG -->
+            <div id="bubblechart"></div>
         </div>
 
     </div>
